# imgui-sfml-template-application

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
sources/: Application.cpp  Application.hpp  main.cpp
